# QtCamera-cmake

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h
